# TerraTrace-Nasa-Challenge-2025

./: Database  Database.md  FAOSTAT_data.csv  README.md  app.py  food_re_index.ipynb  food_re_index.py
backend/: .env copy.example  .env.example  Dockerfile  GEE_SETUP.md  README.md  analytics_dashboard.py  app.db  chat_agent.py  main.py  pyproject.toml  requirements.txt
backend/src/: app.py
backend/src/api/: deps.py
backend/src/api/dependencies/: auth.py
backend/src/api/routes/: __init__.py  alerts.py  auth.py  companies.py  mappings.py  needs.py  recommendations.py  satellite.py  stocks.py  suppliers.py
backend/src/core/: config.py
backend/src/db/: models.py  session.py
backend/src/satellite/: __init__.py  gee_client.py
backend/src/schemas/: schemas.py
backend/src/scripts/: populate_dummy_data.py
backend/src/scripts/data/: barley_estimated_requested.csv  corn_estimated_requested.csv  rapeseed_estimated_requested.csv  soybean_estimated_requested.csv  sunflowerseed_estimated_requested.csv  wheat_estimated_requested.csv
data-science/: Barley_estimated_requested.csv  Corn_estimated_requested.csv  Database.md  Rapeseed_estimated_requested.csv  Soybean_estimated_requested.csv  Sunflowerseed_estimated_requested.csv  Wheat_estimated_requested.csv  food_re_index.ipynb  harvest_locations.xlsx  llm_recommendations.py  requirements.txt
frontend/: Dockerfile  OPENAI_SETUP.md  README.md  index.html  pyproject.toml  run_app.py  script.js  setup_openai.py  style.css
frontend/src/: app.py
frontend/src/assets/: custom.css
