[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.117.1",
    "jwt>=1.4.0",
    "passlib>=1.7.4",
    "pydantic>=2.11.9",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-jose[cryptography]>=3.5.0",
    "earthaccess>=0.15.1",
    "pandas>=2.3.3",
    "ipykernel>=6.30.1",
    "tables>=3.10.2",
    "h5py>=3.14.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.34",
]
