[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref>=3.9.2",
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-leaflet>=1.1.3",
    "dash-table>=5.0.0",
    "dotenv>=0.9.9",
    "gunicorn>=23.0.0",
    "ipyleaflet>=0.20.0",
    "requests>=2.32.5",
    "uvicorn>=0.37.0",
]
